--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Caller Notse</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_add">AddActivity</string>
+    <string name="item_name">Item Name</string>
+    <string name="person_name">Person Name</string>
+    <string name="set_date">Set Date</string>
 </resources>
