--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,11 @@
     <string name="person_name">Person Name</string>
     <string name="set_date">Set Date</string>
 
-    <string name="repository_website">Repository website</string>
-    <string name="all_my_repositories">All my repositories</string>
-    <string name="all_my_apps">All my apps</string>
-    <string name="more_info">More info</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="menu_title_new_group">New group</string>
+    <string name="menu_title_new_broadcast">New broadcast</string>
+    <string name="menu_title_starred_messages">Starred messages</string>
+    <string name="menu_title_status">Status</string>
 </resources>
+
