--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Caller Notse</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_add">AddActivity</string>
+    <string name="title_activity_add">Add New Caller Notes</string>
+    <string name="title_activity_contact">Select Contact</string>
     <string name="item_name">Item Name</string>
     <string name="person_name">Person Name</string>
     <string name="set_date">Set Date</string>
@@ -12,5 +13,10 @@
     <string name="menu_title_new_broadcast">New broadcast</string>
     <string name="menu_title_starred_messages">Starred messages</string>
     <string name="menu_title_status">Status</string>
+
+    <string name="profile">PROFILE</string>
+    <string name="feed">FEED</string>
+    <string name="activity">ACTIVITY</string>
+    <string name="settings">SETTINGS</string>
 </resources>
 
