--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,8 @@
     <string name="menu_title_starred_messages">Starred messages</string>
     <string name="menu_title_status">Status</string>
 
-    <string name="profile">PROFILE</string>
-    <string name="feed">FEED</string>
+
+    <string name="feed">ARCHIVE</string>
     <string name="activity">ACTIVITY</string>
     <string name="settings">SETTINGS</string>
 
