--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Caller Notse</string>
-    <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_add">Add New Caller Notes</string>
     <string name="title_activity_contact">Select Contact</string>
     <string name="item_name">Phone Number</string>
@@ -144,5 +143,11 @@
     <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
     <string name="key_vibrate">key_vibrate</string>
     <string name="key_send_feedback">key_send_feedback</string>
+
+
+    <string name="hello_world">Hello world!</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_main">Call Logs</string>
+    <string name="add">Insert Call Log</string>
 </resources>
 
