export schema false

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="menu_title_starred_messages">Starred messages</string>
     <string name="menu_title_status">Status</string>
 
-    <string name="activity">Hello Haider</string>
+    <string name="activity">Hello Nehal</string>
 
 
     <string name="chathead_content_title">Demo Chat: Active</string>
